crates/tests/src/snapshots/duplicate_enum_variant.snap
---
source: crates/tests/src/lib.rs
expression: out
---
duplicate_enum_variant (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#duplicate_enum_variant)

  × The value of enum variant "B" is the same as another variant
   ╭─[../../testcases/error/duplicate_enum_variant.veryl:4:9]
 3 │         A = 1,
 4 │         B = 1,
   ·         ┬
   ·         ╰── Error location
 5 │     }
   ╰────
  help:
