crates/tests/src/snapshots/duplicated_identifier.snap
---
source: crates/tests/src/lib.rs
expression: out
---
duplicated_identifier (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#duplicated_identifier)

  × "_a" is duplicated
   ╭─[../../testcases/error/duplicated_identifier.veryl:3:9]
 2 │     let _a: logic = 1;
 3 │     let _a: logic = 1;
   ·         ─┬
   ·          ╰── Error location
 4 │ }
   ╰────
  help:
