crates/tests/src/snapshots/function_output_in_always_ff.snap
---
source: crates/tests/src/lib.rs
expression: out
---
function_output_in_always_ff (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#function_output_in_always_ff)

  × function output in always_ff must be connected to a process-local variable
    ╭─[../../testcases/error/function_output_in_always_ff.veryl:12:19]
 11 │     always_ff (clk) {
 12 │         calculate(q);
    ·                   ┬
    ·                   ╰── not a process-local variable
 13 │     }
    ╰────
  help: connect function outputs to variables declared inside this always_ff block
