crates/tests/src/snapshots/generic_instance_direct_write_in_always_ff.snap
---
source: crates/tests/src/lib.rs
expression: out
---
side_effect_function_call_in_always_ff (https://doc.veryl-lang.org/book/07_appendix/02_semantic_error.html#side_effect_function_call_in_always_ff)

  × function "update" can't be called in always_ff because it may write an HDL object declared outside the function
    ╭─[../../testcases/error/generic_instance_direct_write_in_always_ff.veryl:16:9]
 15 │     always_ff (clk) {
 16 │         update::<bus>();
    ·         ────────┬───────
    ·                 ╰── called from always_ff
 17 │     }
    ╰────
    ╭─[../../testcases/error/generic_instance_direct_write_in_always_ff.veryl:12:9]
 11 │     function update::<IF: inst GenericWriteBus> () {
 12 │         IF.data = 1;
    ·         ───┬───
    ·            ╰── external write occurs here
 13 │     }
    ╰────
  help: move the external write into this always_ff, or use an output argument connected to a variable declared inside it
